[gd_scene load_steps=19 format=2]

[ext_resource path="res://PixelEmulator-xq08.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tiles/GUI_tile.png" type="Texture" id=2]
[ext_resource path="res://GUI_Manager.gd" type="Script" id=3]
[ext_resource path="res://runtime_data.tres" type="Resource" id=4]
[ext_resource path="res://Tiles/menu_tile.png" type="Texture" id=5]
[ext_resource path="res://Tiles/stats_tile.png" type="Texture" id=6]
[ext_resource path="res://Tiles/health_tile.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[node name="MarginContainer" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
_dialog_text = NodePath("TextBox/DialogueLabel")
_runtime_data = ExtResource( 4 )

[node name="TextBox" type="Sprite" parent="."]
visible = false
position = Vector2( 128, 192 )
texture = ExtResource( 2 )

[node name="DialogueLabel" type="RichTextLabel" parent="TextBox"]
margin_left = -118.0
margin_top = -24.0
margin_right = 117.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Sprite" parent="."]
visible = false
position = Vector2( 224, 64 )
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = -24.0
margin_top = -53.0
margin_right = 21.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Button" parent="Menu/VBoxContainer"]
margin_right = 46.0
margin_bottom = 12.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
button_mask = 0
text = " Stats"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 16.0
margin_right = 46.0
margin_bottom = 28.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = " Quit"

[node name="Stats" type="Sprite" parent="."]
visible = false
position = Vector2( 136, 64 )
texture = ExtResource( 6 )

[node name="StatsLabel" type="RichTextLabel" parent="Stats"]
margin_left = -48.0
margin_top = -53.0
margin_right = 48.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerHealth"]
margin_left = -22.0
margin_top = -24.0
margin_right = 70.0
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Player
HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PlayerHealth"]
margin_left = -28.0
margin_top = -14.0
margin_right = 28.0
margin_bottom = -13.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="Menu/VBoxContainer/Stats" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/Stats" to="." method="_on_Button_focus_exited"]
[connection signal="focus_entered" from="Menu/VBoxContainer/Quit" to="." method="_on_Button2_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/Quit" to="." method="_on_Button2_focus_exited"]
